--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8834
+  port: 8888
 spring:
   datasource:
-    url: jdbc:sqlite:test.db
+    url: jdbc:sqlite:dblist.db
     driver-class-name: org.sqlite.JDBC
     username: springuser
     password: ThePassword
