--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,10 @@ spring:
     driver-class-name: org.sqlite.JDBC
     username: springuser
     password: ThePassword
+    initialization-mode: always
   jpa:
+    hibernate:
+      ddl-auto: create
     database-platform: com.myohanhtet.dirctonary.config.SQLiteDialect
+
+
