add CSV Helper auto import data sql

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,8 @@ spring:
     initialization-mode: always
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
+    generate-ddl: false
     database-platform: com.myohanhtet.dirctonary.config.SQLiteDialect
 
 
